# BoostAutoJsonSerializer

./: .gitignore  CMakeLists.txt  README.md
BoostAutoJsonSerializer.Tests/: CMakeLists.txt
BoostAutoJsonSerializer.Tests/Src/: CMakeLists.txt
BoostAutoJsonSerializer.Tests/Src/Internal/: BoostJsonSerializerImplTests.cpp  BoostJsonValidatorImplTests.cpp  JsonDataSerializerTests.cpp  JsonDataValidatorTests.cpp
BoostAutoJsonSerializer.Tests/Src/Internal/Mocks/: JsonDataSerializerImplMock.hpp  JsonDataSerializerMock.hpp  JsonDataValidatorImplMock.hpp  JsonDataValidatorMock.hpp
Include/: CommonConfig.hpp
Include/Common/Boost/: BoostIncludeGuardEnd.hpp  BoostIncludeGuardStart.hpp
Include/Exceptions/: XArgumentNull.hpp  XBaseException.hpp  XInvalidArgument.hpp  XInvalidFormat.hpp  XSerialization.hpp
Include/Interfaces/: IJsonDataSerializer.hpp  IJsonDataSerializerImpl.hpp  IJsonDataValidator.hpp  IJsonDataValidatorImpl.hpp  IProgram.hpp
Include/Interfaces/Factories/: IGenericObjectFactoryT.hpp  IObjectFactories.hpp
Include/Internal/: BoostJsonSerializerImpl.hpp  BoostJsonSerializerInfra.hpp  BoostJsonValidatorImpl.hpp  JsonDataSerializer.hpp  JsonDataValidator.hpp  ObjectFactory.hpp  Program.hpp  SerializableDataModels.hpp
Src/: CMakeLists.txt  main.cpp
Src/Internal/: BoostJsonSerializerImpl.cpp  BoostJsonValidatorImpl.cpp  JsonDataSerializer.cpp  JsonDataValidator.cpp  ObjectFactory.cpp  Program.cpp
